--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
+  cloud_firestore: ^4.13.3
 
 dev_dependencies:
   flutter_test:
